# BloomFilterC

./: .gitignore  CMakeLists.txt  README.md  a.out  bitarray.c  bitarray.h  filter.c  filter.h  hashtable.c  hashtable.h  main  main.c  main_false_positive  main_test_binary.c  main_test_bst  main_test_hash  main_test_hash.c  makefile  massif.out.23040  massif.out.7053  test.c  test_false_positive.c  tree_word.c  tree_word.h
passwords/: result1000.txt  result1000bst.txt  result10k.txt  result10kbst.txt  resultFalsepositive.txt  result_sec.txt  results.txt  test.txt
